--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <div class="Logo">
                 <h1>Alt Home</h1>
 
-                <p>Trouvez une chambre près de chez vous
+                <p class="textelogo">Trouvez une chambre près de chez vous
                     </br>
                     Pour la nuit ou pour la semaine
                 </p>
             </div>
 
-            <nav>
+            <nav class="navigation">
                 <ul>
                     <li><a href="#">Accueil</a></li>
                     <li><a href="#">Hébergement</a></li>
@@ -38,12 +38,12 @@
         </div>
 
         <div class="block2">
-            <form>
+            <form class="formulaire">
                 <i class="fa-solid fa-location-dot"></i><input id="localisation" type="text"
-                    placeholder="Destination"><button>Rechercher</button>
+                    placeholder="Destination" size="25"><button class="button">Rechercher</button>
             </form>
 
-            <p>Filtre</p>
+            <p class="filtre">Filtres</p>
 
             <ul>
                 <li><i class="fa-solid fa-people-group"></i>Familiale</li>
@@ -52,7 +52,9 @@
             </ul>
         </div>
 
+        <div class="info">
         <p><i class="fa-solid fa-circle-info"></i>Plus de 300 chambres dans votre ville</p>
+        </div>
 
     </header>
 
@@ -167,7 +169,7 @@
             </ul>
         </div>
 
-        <div class="Assistance">
+        <div class="BlockFoot3">
             <p>Assistance</p>
 
             <ul>
