--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <div class="block2">
             <form class="formulaire">
-                <i class="fa-solid fa-location-dot"></i><input id="localisation" type="text"
-                    placeholder="Destination" size="25"><button class="button">Rechercher</button>
+                <i class="fa-solid fa-location-dot"></i><input id="localisation" type="text" placeholder="Destination"
+                    size="25"><button class="button">Rechercher</button>
             </form>
 
             <p class="filtre">Filtres</p>
@@ -53,101 +53,124 @@
         </div>
 
         <div class="info">
-        <p><i class="fa-solid fa-circle-info"></i>Plus de 300 chambres dans votre ville</p>
+            <p><i class="fa-solid fa-circle-info"></i>Plus de 300 chambres dans votre ville</p>
         </div>
 
     </header>
 
-    <div id="main">
-        <section id="Favoris">
-            <p>Les favoris</p>
+    <div class="main">
+        <section class="favoris">
+            <p class="favoristexte">Les Favoris</p>
 
-            <article>
-                <img src="image/best_bedroom_1.png" alt="Meilleur chambre 1" />
-                <p class="gras">Chambre parentale marine</p>
-                <p>Nuit à partir de 25€</p>
-                <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i
-                    class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            </article>
+            <div class="articles">
+                <article>
+                    <img src="image/best_bedroom_1.png" alt="Meilleur chambre 1" />
+                    <p class="gras">Chambre parentale marine</p>
+                    <p>Nuit à partir de 25€</p>
+                    <div class="emote">
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i> <i
+                            class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i>
+                    </div>
+                </article>
 
-            <article>
-                <img src="image/best_bedroom_2.png" alt="Meilleur chambre 2" />
-                <p class="gras">Chambre cocooning</p>
-                <p>Nuit à partir de 25€</p>
-                <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i
-                    class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            </article>
+                <article>
+                    <img src="image/best_bedroom_2.png" alt="Meilleur chambre 2" />
+                    <p class="gras">Chambre cocooning</p>
+                    <p>Nuit à partir de 25€</p>
+                    <div class="emote">
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i> <i
+                            class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i>
+                    </div>
+                </article>
 
-            <article>
-                <img src="image/best_bedroom_3.png" alt="Meilleur chambre 3" />
-                <p class="gras">Chambre féérique</p>
-                <p>Nuit à partir de 30€</p>
-                <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i
-                    class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            </article>
+                <article>
+                    <img src="image/best_bedroom_3.png" alt="Meilleur chambre 3" />
+                    <p class="gras">Chambre féérique</p>
+                    <p>Nuit à partir de 30€</p>
+                    <div class="emote">
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i> <i
+                            class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i>
+                    </div>
+                </article>
 
-            <article>
-                <img src="image/best_bedroom_4.png" alt="Meilleur chambre 4" />
-                <p class="gras">Suite parentale</p>
-                <p>Nuit à partir de 50€</p>
-                <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i
-                    class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            </article>
+                <article>
+                    <img src="image/best_bedroom_4.png" alt="Meilleur chambre 4" />
+                    <p class="gras">Suite parentale</p>
+                    <p>Nuit à partir de 50€</p>
+                    <div class="emote">
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i> <i
+                            class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i> <i class="fa-regular fa-star"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
-        <section id="Hebergements">
-            <p>Nos hébergements</p>
+        <div class="second">
+            <section class="hebergements">
+                <p class="textehebergements">Nos hébergements</p>
 
-            <article>
-                <img src="image/basic1.jpeg" alt="Hebergement 1"/>
-                <p>Chambre boisée</p>
-                <p>Nuit à partir de 20€</p>
-            </article>
+                <div class="second2">
+                    <div class="sb1">
+                        <article>
+                            <img src="image/basic1.jpeg" alt="Hebergement 1" />
+                            <p>Chambre boisée</p>
+                            <p>Nuit à partir de 20€</p>
+                        </article>
 
-            <article>
-                <img src="image/basic2.jpeg" alt="Hebergement 2"/>
-                <p>Chambre princesse</p>
-                <p>Nuit à partir de 40€</p>
-            </article>
+                        <article>
+                            <img src="image/basic2.jpeg" alt="Hebergement 2" />
+                            <p>Chambre princesse</p>
+                            <p>Nuit à partir de 40€</p>
+                        </article>
 
-            <article>
-                <img src="image/basic3.jpeg" alt="Hebergement 3"/>
-                <p>Suite avec vue</p>
-                <p>Nuit à partir de 80€</p>
-            </article>
+                        <article>
+                            <img src="image/basic3.jpeg" alt="Hebergement 3" />
+                            <p>Suite avec vue</p>
+                            <p>Nuit à partir de 80€</p>
+                        </article>
+                    </div>
+                    <div class="sb2">
+                        <article>
+                            <img src="image/basic4.jpg" alt="Hebergement 4" />
+                            <p>Chambre cozy</p>
+                            <p>Nuit à partir de 48€</p>
+                        </article>
 
-            <article>
-                <img src="image/basic4.jpg" alt="Hebergement 4"/>
-                <p>Chambre cozy</p>
-                <p>Nuit à partir de 48€</p>
-            </article>
+                        <article>
+                            <img src="image/basic5.jpg" alt="Hebergement 5" />
+                            <p>Chambre ouverte</p>
+                            <p>Nuit à partir de 30€</p>
+                        </article>
 
-            <article>
-                <img src="image/basic5.jpg" alt="Hebergement 5"/>
-                <p>Chambre ouverte</p>
-                <p>Nuit à partir de 30€</p>
-            </article>
+                        <article>
+                            <img src="image/basic6.jpeg" alt="Hebergement 6" />
+                            <p>Chammbre bleue</p>
+                            <p>Nuit à partir de 35€</p>
+                        </article>
+                    </div>
+                </div>
+            </section>
 
-            <article>
-                <img src="image/basic6.jpeg" alt="Hebergement 6"/>
-                <p>Chammbre bleue</p>
-                <p>Nuit à partir de 35€</p>
-            </article>
-        </section>
+            <aside class="luxe">
+                <p class="texteluxe">Luxe</p>
 
-        <aside id="Luxe">
-            <article>
-                <img src="image/luxe1.png" alt="Luxe 1"/>
-            </article>
+                <article>
+                    <img src="image/luxe1.png" alt="Luxe 1" />
+                </article>
 
-            <article>
-                <img src="image/luxe2.png" alt="Luxe 2"/>
-            </article>
+                <article>
+                    <img src="image/luxe2.png" alt="Luxe 2" />
+                </article>
 
-            <article>
-                <img src="image/luxe3.png" alt="Luxe 3"/>
-            </article>
-        </aside>
+                <article>
+                    <img src="image/luxe3.png" alt="Luxe 3" />
+                </article>
+            </aside>
+        </div>
     </div>
 
     <footer>
